<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.expensestracker.mainactivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_budgetManager"
        android:name="com.example.expensestracker.mainactivity.ui.budgetmanager.BudgetManagerFragment"
        android:label="@string/budget_manager"
        tools:layout="@layout/fragment_budget_manager" />

    <fragment
        android:id="@+id/nav_budgetPlanner"
        android:name="com.example.expensestracker.mainactivity.ui.budgetplanner.BudgetPlannerFragment"
        android:label="@string/budget_planner"
        tools:layout="@layout/fragment_budget_planner" />

</navigation>