<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header_tv"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_your_wallet"
        android:background="@color/colorPrimary"
        android:layout_margin="0dp"
        android:textSize="20dp"
        android:padding="10dp"
        android:textColor="#fff"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money_amount"
        app:startIconDrawable="@drawable/ic_dollar"
        app:endIconMode="clear_text"
        app:startIconContentDescription="@string/content_description_end_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/add_income_button"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="20.0dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
