<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".budget_categories.activities.AddingBudgetCategoryActivity">


    <HorizontalScrollView
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list_view_id"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:horizontalSpacing="5dp"
                android:paddingTop="10dp"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintBottom_toBottomOf="@id/name_layout"
        app:layout_constraintBottom_toTopOf="@+id/budget_layout"
        android:id="@+id/name_layout"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        app:startIconDrawable="@drawable/icon_shopaholic"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:startIconContentDescription="@string/content_description_end_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/name_layout"
        android:id="@+id/budget_layout"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_price"
        app:startIconDrawable="@drawable/ic_dollar"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:helperText="@string/price_helper"
        app:helperTextTextColor="#FF0000"
        app:startIconContentDescription="@string/content_description_end_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Category_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add_Budget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20.0dp"
        android:textStyle="bold"/>


</LinearLayout>