<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactions.ui.AddTransactionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_category_hint"
                android:textSize="16.0dp"/>

            <Spinner
                android:id="@+id/product_category_spinner"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                app:startIconDrawable="@drawable/icon_shopaholic"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/content_description_end_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoCorrect"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20.0dp"/>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price"
                app:startIconDrawable="@drawable/ic_dollar"

                app:endIconMode="clear_text"
                app:prefixText="$"
                app:startIconContentDescription="@string/content_description_end_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price_textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20.0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date_hint"
                android:textSize="16.0dp"/>

            <DatePicker
                android:layout_marginTop="5dp"
                android:id="@+id/date_picker"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30.0dp"/>

            <Button
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Transaction"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:textSize="20.0dp"
                android:textStyle="bold"
                android:onClick="onClickAddTransaction"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>