<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4d3d3"
    android:orientation="vertical"
    tools:context=".mainactivity.fragments.budgetmanager.BudgetManagerFragment">

    <RelativeLayout
        android:id="@+id/home_header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textSize="12.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="17dp"
            android:text="@string/budget"
            android:textAlignment="center"
            android:textSize="12.0sp" />
    </RelativeLayout>

    <ListView
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toBottomOf="@+id/home_header"
        app:layout_constraintBottom_toTopOf="@+id/home_bottom"
        android:id="@+id/budget_manager_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <RelativeLayout
        android:id="@+id/home_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:paddingVertical="15dp"
            android:paddingHorizontal="7dp"
            android:textColor="#fff"
            android:background="@drawable/button_style"
            android:id="@+id/add_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:text="@string/add_budget_category"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
